tests/test016.err
error: test016.tig:2:1: unknown function `f'
