tests/test016.tig
/* ERR: unknown function */
f(42)
